--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,13 @@
       {
         "src": "project1/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.11.3" }
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       },
       {
         "src": "build_files.sh",
         "use": "@vercel/static-build",
         "config": {
-          "distDir": "staticfiles_build"
+            "distDir": "static"
         }
       }
     ],
@@ -20,8 +20,8 @@
         "dest": "/static/$1"
       },
       {
-        "src": "/(.*)",
-        "dest": "project1/wsgi.py"
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
       }
     ]
   }
