--- a/railway.toml
+++ b/railway.toml
@@ -3,3 +3,18 @@ DJANGO_SETTINGS_MODULE = "project1.settings"
 
 [build]
 command = "gunicorn project1.wsgi:application --bind 0.0.0.0:$PORT"
+
+
+JSON
+
+{
+  "$schema": "https://railway.app/railway.schema.json",
+  "build": {
+    "builder": "NIXPACKS"
+  },
+  "deploy": {
+    "numReplicas": 1,
+    "restartPolicyType": "ON_FAILURE",
+    "restartPolicyMaxRetries": 10
+  }
+}
