--- a/railway.toml
+++ b/railway.toml
@@ -1,20 +1,9 @@
-[env]
-DJANGO_SETTINGS_MODULE = "project1.settings"
+TOML
 
 [build]
-command = "gunicorn project1.wsgi:application --bind 0.0.0.0:$PORT"
+builder = "NIXPACKS"
 
-
-JSON
-
-{
-  "$schema": "https://railway.app/railway.schema.json",
-  "build": {
-    "builder": "NIXPACKS"
-  },
-  "deploy": {
-    "numReplicas": 1,
-    "restartPolicyType": "ON_FAILURE",
-    "restartPolicyMaxRetries": 10
-  }
-}
+[deploy]
+numReplicas = 1
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 10
