--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,5 @@
-[build]
-builder = "NIXPACKS"
+[env]
+DJANGO_SETTINGS_MODULE = "project1.settings"
 
-[deploy]
-numReplicas = 1
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+[build]
+command = "gunicorn project1.wsgi:application --bind 0.0.0.0:$PORT"
